# drinkit_stock_transfers

./: .gitignore  Makefile  README.md  main.py  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
bot/: config.py
bot/dialogs/: audit_dialog.py  employees_dialog.py  shift_dialog.py
bot/middlewares/: admin_only.py
bot/services/: assignment_service.py  audit_definition.py  audit_sheet_service.py  container.py  employess_service.py
bot/storage/: employees.json
docker/: Dockerfile  deploy.sh  docker-compose.prod.yml  docker-compose.yml  init.sql
drinkit_stock_transfers/: config.py  constants.py  logger.py
drinkit_stock_transfers/auth/: __init__.py  models.py  service.py  storage.py
drinkit_stock_transfers/clients/: dodo_api.py  google_sheets_client.py
drinkit_stock_transfers/db/: connection_pool.py
drinkit_stock_transfers/jobs/: audit_outbox_job.py  transfer_job.py
drinkit_stock_transfers/repositories/: audit_repository.py  transfer_repository.py
drinkit_stock_transfers/scripts/: get_token.py
drinkit_stock_transfers/services/: pagination.py  reporting_service.py  retry_service.py  transfer_service.py
github/workflows/: deploy.yml
scheduler/: bot_jobs.py  scheduler_service.py
storage/: employees.json
